加入远程运行运行后不可以再运行&无参数时提示

--- a/yunweiPT_1.1/options/templates/close.html
+++ b/yunweiPT_1.1/options/templates/close.html
@@ -68,6 +68,7 @@
             $('#run').click(function(){
                 window.readline = 0;
                 var csrftoken = $.cookie('csrftoken');
+                $('#run').attr('disabled','disabled')
                 var id = $('#ser_id').val();
                 var mess = $('#mess').val();
                 var option = $('#close').val();
