--- a/yunweiPT_1.1/options/templates/open.html
+++ b/yunweiPT_1.1/options/templates/open.html
@@ -71,6 +71,7 @@
             $('#run').click(function(){
                 var csrftoken = $.cookie('csrftoken');
                 window.readline = 0;
+                $('#run').attr('disabled','disabled')
                 var id = $('#ser_id').val();
                 var mess = $('#mess').val();
                 var status = $('#status').val();
