--- a/yunweiPT_1.1/options/templates/update.html
+++ b/yunweiPT_1.1/options/templates/update.html
@@ -67,7 +67,7 @@
             $('#run').click(function(){
                 var csrftoken = $.cookie('csrftoken');
                 window.readline = 0;
-                $('#run').attr('disabled','disabled')s
+                $('#run').attr('disabled','disabled');
                 var id = $('#ser_id').val();
                 var ver = $('#svn_v').val();
                 if(id == ""){
