--- a/yunweiPT_1.1/templates/index_option.html
+++ b/yunweiPT_1.1/templates/index_option.html
@@ -57,8 +57,9 @@
             <li class="dropdown user-dropdown">
               <a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="fa fa-user"></i> 当前用户:{{user}} <b class="caret"></b></a>
               <ul class="dropdown-menu">
+                <li><a href="/changepassword/"><i class="fa fa-gear"></i> 修改密码</a></li>
                 <li class="divider"></li>
-                <li><a href='javascript:document.form1.submit();'><i class="fa fa-power-off"></i> <font color='#000000'>Log Out</font></a></li>
+                <li><a href='javascript:document.form1.submit();'><i class="fa fa-power-off"></i> <font color='#000000'>退出</font></a></li>
               </ul>
             </li>
           </ul>
